--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "tester",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://chiaraboisaubin/.github.io/tester.git",
