--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://chiaraboisaubin.com",
